// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pin > should match snapshot when disabled (cursor default) 1`] = `
<div>
  <div
    class="pin"
    style="width: 35px; height: 35px; left: 20%; top: 30%; cursor: default;"
  >
    <div
      class="dot"
    >
      <i
        data-color="mock-color:2"
        data-icon="true"
        data-testid="fa"
      />
    </div>
  </div>
</div>
`;

exports[`Pin > should match snapshot with default props (no tolerance) 1`] = `
<div>
  <div
    class="pin"
    style="width: 40px; height: 40px; left: 50%; top: 25%;"
  >
    <div
      class="dot"
    >
      <i
        data-color="mock-color:2"
        data-icon="true"
        data-testid="fa"
      />
    </div>
  </div>
</div>
`;

exports[`Pin > should match snapshot with tolerance circle 1`] = `
<div>
  <div
    class="pin"
    style="width: 30px; height: 30px; left: 10%; top: 90%;"
  >
    <div
      class="tolerance"
      style="width: 120px; height: 120px;"
    />
    <div
      class="dot"
    >
      <i
        data-color="mock-color:0"
        data-icon="true"
        data-testid="fa"
      />
    </div>
  </div>
</div>
`;
